@@ -2,6 +2,8 @@ openmediavault-docker-gui (3.0.6) UNRELEASED; urgency=medium
 
   * Bug fixes to container and image backend
   * Rewrite to improve container and image listing performance 
+  * Fix for Image ID changes introduced in docker-engine 1.10
+  * Add dependency on docker-engine >= 1.10
 
  -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Thu, 21 Jan 2016 15:57:44 +0100
 
